--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
 workflows:
   my_workflow:
     jobs:
-      - say_hello_world_output
+      - save_hello_world_output
       - print_output_file
           requires:
             - save_hello_world_output
